--- a/App.config
+++ b/App.config
@@ -4,6 +4,6 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
     </startup>
   <connectionStrings>
-    <add name="rbx" connectionString="Data Source=DESKTOP-BVR2RP8; Initial Catalog=KPointofSales; Integrated Security=True" providerName="System.Data.Sqlclient" />
+    <add name="rbx" connectionString="Data Source=; Initial Catalog=KPointofSales; Integrated Security=True" providerName="System.Data.Sqlclient" />
   </connectionStrings>
 </configuration>
